# libsomni

./: CMakeLists.txt
include/: PhantomOmniCommunications.hh  PhantomOmniDevice.hh
include/libsomni/: PhantomOmniCommunications.hh  PhantomOmniDevice.hh
old/: get_omni_serial.cpp
src/: CMakeLists.txt  PhantomOmniCommunicationsLinux.cc  PhantomOmniDevice.cc
